Initial rough implementation of popup dialog